--- a/shoppingList/src/main/resources/templates/home.html
+++ b/shoppingList/src/main/resources/templates/home.html
@@ -14,6 +14,8 @@
                 <h3 class="mySticky bg-gray text-dark rounded">Foods</h3>
                 <div th:each="f: ${foodProducts}" th:object="${f}"
                      class="mt-3 rounded badge-info">
+                    <a class="ml-3 text-danger" th:href="@{/products/edit/{id}(id= *{id})}">Edit</a>
+
                     <img class="mr-2" src="/img/food.png" alt="Food" width="50px" height="50px">
                     <span th:text="|Name: *{name} Price: *{price} lv|">Name: {name} Price: {price} lv</span>
                     <a class="ml-3 text-danger" th:href="@{/products/buy/{id}(id= *{id})}">Buy</a>
@@ -23,6 +25,8 @@
                 <h3 class="mySticky bg-gray text-dark rounded">Drinks</h3>
                 <div th:each="d: ${drinkProducts}" th:object="${d}"
                      class="mt-3 rounded badge-warning">
+                    <a class="ml-3 text-danger" th:href="@{/products/edit/{id}(id= *{id})}">Edit</a>
+
                     <img class="mr-2" src="/img/drink.png" alt="Food" width="50px" height="50px">
                     <span th:text="|Name: *{name} Price: *{price} lv|">Name: {name} Price: {price} lv</span>
                     <a th:href="@{/products/buy/{id}(id= *{id})}" class="ml-3 text-danger">Buy</a>
@@ -34,6 +38,8 @@
                 <h3 class="mySticky bg-gray text-dark rounded">Households</h3>
                 <div th:each="h: ${houseProducts}" th:object="${h}"
                      class="mt-3 rounded badge-success">
+                    <a class="ml-3 text-danger" th:href="@{/products/edit/{id}(id= *{id})}">Edit</a>
+
                     <img class="mr-2" src="/img/household.png" alt="Food" width="50px" height="50px">
                     <span th:text="|Name: *{name} Price: *{price} lv|">Name: {name} Price: {price} lv</span>
                     <a class="ml-3 text-danger" th:href="@{/products/buy/{id}(id= *{id})}">Buy</a>
@@ -44,10 +50,10 @@
                 <div th:each="o: ${otherProducts}" th:object="${o}"
 
                      class="mt-3 rounded badge-secondary">
+                    <a class="ml-3 text-danger" th:href="@{/products/edit/{id}(id= *{id})}">Edit</a>
                     <img class="mr-2" src="/img/other.png" alt="Food" width="50px" height="50px">
                     <span th:text="|Name: *{name} Price: *{price} lv|">Name: {name} Price: {price} lv</span>
                     <a class="ml-3 text-danger" th:href="@{/products/buy/{id}(id= *{id})}">Buy</a>
-                    <a class="ml-3 text-danger" th:href="@{/products/buy/{id}(id= *{id})}">edit</a>
                 </div>
             </div>
         </div>
